# sierra-scheme

./: Cargo.toml  README.md  build.rs  file.scm  wrapper.h
src/: builtins.rs  codegen.rs  function.rs  gc.rs  lib.rs  macros.rs  main.rs  synpass.rs  value.rs  vm.rs
src/value/: closure.rs  cons.rs  environment.rs  instruction.rs  macro_.rs  package.rs  symbol.rs  vector.rs
