[package]
name = "sierra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
unescape = "0.1.0"
parking_lot = "0.11.1"
cranelift = "0.74.0"
cranelift-jit = "0.74.0"
cranelift-module = "0.74.0"
dashmap = "4.0.2"
[build-dependencies]
rerun_except = "1.0"
num_cpus = "1.13"
which = "4.0"
